# google-flights-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: parse.rs
examples/: cheapest_dates.rs  date_grid.rs  deals.rs  explore.rs  fingerprint.rs  flights.rs  graph.rs  multi_city.rs  offer.rs  proxy.rs
gflights-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
gflights-py/gflights/: __init__.py  _client.py  _gflights.pyi  _types.py
gflights-py/src/: lib.rs
gflights-py/tests/: test_errors.py  test_import.py  test_live.py  test_types.py
hooks/: pre-commit
parser/: Cargo.toml
parser/src/: calendar_graph_response.rs  city_request.rs
parser/test_files/: flights.txt  flights_new_test.txt  low_price_in_second_line.txt  lux_dubai_oneway.txt  raw.response  raw_multiline.txt  response_non_uniform_city_images.txt  response_with_first_fixed_full.txt
parsers/: Cargo.toml  error.txt  out.txt
parsers/src/: calendar_graph_request.rs  calendar_graph_response.rs  city_response.rs  common.rs  flight_request.rs  flight_response.rs  lib.rs  offer_response.rs
parsers/test_files/: lux_tokyo_oneway.txt  raw_gflights.response  with_28_elements.txt
proto/: Cargo.toml  readme.md
proto/src/: lib.rs
protos/: Cargo.toml  build.rs  readme.md
protos/src/: lib.rs
src/: lib.rs
src/parsers/: calendar_graph_request.rs  calendar_graph_response.rs  city_request.rs  city_response.rs  common.rs  constants.rs  date_grid_request.rs  date_grid_response.rs  flight_request.rs  flight_response.rs  mod.rs  offer_response.rs
src/parsers/common/: airline.rs  duration.rs  fixed_flights.rs  location.rs  mod.rs  travelers.rs  types.rs
src/parsers/request/: calendar_graph_request.rs  city_request.rs  date_grid_request.rs  deals_request.rs  explore_request.rs  flight_request.rs  mod.rs
src/parsers/response/: calendar_graph_response.rs  city_response.rs  date_grid_response.rs  deals_response.rs  explore_response.rs  flight_response.rs  mod.rs  offer_response.rs
src/protos/: message.proto  mod.rs  readme.md
src/requests/: api.rs  config.rs
src/requests/config/: builder.rs  currency.rs  deals.rs  explore.rs  mod.rs  multi_city.rs
test_files/: booking_offer_response.txt  error0.txt  error1.txt  graph_response  inner_object_test.txt  offers_full.txt  offers_single_line.txt  raw_offer_response.txt
tests/: live_api.rs  negative.rs  wire.rs
