[package]
name = "gflights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
percent-encoding = "2.3.1"
reqwest = { version = "0.11.23", features = ["native-tls-vendored"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_path_to_error = "0.1.15"
tokio = { version = "1.35.1", features = ["full"] }
governor = "0.6.0"
regex = "1.10.3"
serde_repr = "0.1.18"

base64 = "0.21.7"
prost = "0.12.3"
prost-build = "0.12.3"
prost-types = "0.12.3"

[build-dependencies]
prost-build = "0.12.3"

[profile.dev]
opt-level = 0
debug = true
