[package]
name = "gflights"
version = "0.1.0"
edition = "2021"
description = "Unofficial async Rust client for the Google Flights web API — search flights, price graphs, and booking offers."
license = "MIT"
keywords = ["google-flights", "flights", "travel", "api", "scraping"]
categories = ["web-programming::http-client", "api-bindings"]
repository = "https://github.com/YOUR_USERNAME/google-flights-rs"
readme = "README.md"

[[bin]]
name = "gflights"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
percent-encoding = "2.3.1"
reqwest = { version = "0.11.23", features = ["native-tls-vendored"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_path_to_error = "0.1.15"
tokio = { version = "1.35.1", features = ["full"] }
governor = "0.6.0"
regex = "1.10.3"
serde_repr = "0.1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

base64 = "0.21.7"
prost = "0.12.3"
prost-build = "0.12.3"
prost-types = "0.12.3"

[dev-dependencies]

[build-dependencies]
prost-build = "0.12.3"

[profile.dev]
opt-level = 0
debug = true
