[workspace]
members = [".", "gflights-py"]
resolver = "2"

[package]
name = "gflights"
version = "0.3.0"
edition = "2021"
description = "Unofficial async Rust client for the Google Flights web API — search flights, price graphs, and booking offers."
license = "MIT"
keywords = ["google-flights", "flights", "travel", "api", "scraping"]
categories = ["web-programming::http-client", "api-bindings"]
repository = "https://github.com/nas-/google-flights-rs"
readme = "README.md"
exclude = [".claude/", ".devcontainer/", ".github/"]

[[bin]]
name = "gflights"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["full"] }
governor = "0.7"
regex = "1"
serde_repr = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = { version = "15", default-features = false }

base64 = "0.22"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[profile.dev]
opt-level = 0
debug = true
