[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "gflights"
version = "0.1.0"
description = "Unofficial Python client for Google Flights, powered by a Rust backend"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
]

[dependency-groups]
dev = ["pytest>=8", "maturin>=1.4,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires live network (set RUN_LIVE_TESTS=1 to run)",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "gflights"
