[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "gflights"
version = "0.1.0"
description = "Unofficial async Python client for Google Flights, powered by a Rust backend"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0", "maturin>=1.4,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: requires live network (set RUN_LIVE_TESTS=1 to run)",
]

[tool.maturin]
features = ["pyo3/extension-module"]
# Extension becomes gflights._gflights; the gflights/ Python package is included too.
module-name = "gflights._gflights"
python-packages = ["gflights"]
