[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
percent-encoding = "2.3.1"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_path_to_error = "0.1.15"
clap = { version = "4.4.18", features = ["derive"] }
serde_repr = "0.1.18"
